--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@senhorbardell/react-native-fast-image",
-    "version": "0.0.0-development",
+    "name": "senhorbardell-react-native-fast-image",
+    "version": "0.0.1",
     "description": "🚩 FastImage, performant React Native image component. Fork",
     "keywords": [
         "cache",
